# logion-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build-debian11  README.md  additional-types.json  docker-compose.yml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: auto-assign.yml
.github/workflows/: build.yml  release-wasm.yml  rust.yml
docs/: inclusion_fees.ods  setup_mvp_node.md  storage_backward_compatibility.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
pallets/lo_authority_list/: Cargo.toml
pallets/lo_authority_list/src/: lib.rs  mock.rs  tests.rs
pallets/logion_loc/: Cargo.toml
pallets/logion_loc/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  uuid.rs  weights.rs
pallets/pallet-logion-nft/: Cargo.toml  README.md
pallets/pallet-logion-nft/src/: lib.rs  mock.rs  tests.rs
pallets/shared/: Cargo.toml
pallets/shared/src/: lib.rs
pallets/vault/: Cargo.toml
pallets/vault/src/: lib.rs  mock.rs  tests.rs
pallets/verified_recovery/: Cargo.toml
pallets/verified_recovery/src/: lib.rs  mock.rs  tests.rs  weights.rs
res/: dev-plain.json  dev-raw.json  mvp-plain.json  mvp-raw.json  test-plain.json  test-raw.json
runtime/: Cargo.toml  PalletIds.md
runtime/src/: lib.rs  weights.rs
runtime/src/weights/: frame_system.rs  pallet_balances.rs  pallet_lo_authority_list.rs  pallet_logion_loc.rs  pallet_logion_vote.rs  pallet_multisig.rs  pallet_recovery.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_utility.rs  pallet_verified_recovery.rs
scripts/: benchmark-logion-loc.sh  benchmark_all.sh  benchmark_one.sh  build_benchmark.sh  build_debian_bin.sh  dev_run.sh  docker_run.sh  list_benchmarks.sh  local_run.sh  weights-template.hbs
